Add complete support for REST requests

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "nfp-expo-css",
-    "slug": "nfp-expo-css",
+    "name": "desagil-exemplo",
+    "slug": "desagil-exemplo",
     "version": "0.1.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
