--- a/backend/test.properties
+++ b/backend/test.properties
@@ -2,7 +2,7 @@ dao.name = test
 
 dao.credentials = test.json
 
-dao.storage.url = _____.appspot.com
+dao.storage.url = exemplotest-bdf48.appspot.com
 
 rest.package = br.edu.insper.desagil.backend.endpoint
 
