Fix upload support

--- a/backend/main.properties
+++ b/backend/main.properties
@@ -2,7 +2,7 @@ dao.name =
 
 dao.credentials = main.json
 
-dao.storage.url = exemplo-7d268.appspot.com
+dao.storage.url = _____.appspot.com
 
 rest.package = br.edu.insper.desagil.backend.endpoint
 
