--- a/backend/test.properties
+++ b/backend/test.properties
@@ -1,11 +1,11 @@
-dao.name = test
+dao.name = 
 
 dao.credentials = test.json
 
-dao.storage.url = exemplotest-bdf48.appspot.com
+dao.storage.url = _____.appspot.com
 
 rest.package = br.edu.insper.desagil.backend.endpoint
 
-rest.port = 8080
+rest.port = 8081
 
 rest.tunnel = false
